<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/journey_info_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.myjourneys.JourneyInfoActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/amsterdam"
        android:alpha="0.2"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/journey_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/journey_location"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/journey_dates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/journey_dates"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/journey_dates"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/flights_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/flights_button"
        style="@style/ButtonTheme"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/light_blue_button"
        android:text="@string/flights"
        app:layout_constraintBottom_toTopOf="@+id/accommodation_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="flightInfo"
        />

    <Button
        android:id="@+id/accommodation_button"
        style="@style/ButtonTheme"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/light_blue_button"
        android:text="@string/accommodation"
        app:layout_constraintBottom_toTopOf="@+id/activities_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="accommodationInfo"/>

    <Button
        android:id="@+id/activities_button"
        style="@style/ButtonTheme"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/light_blue_button"
        android:onClick="activityInfo"
        android:text="@string/activities"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>